tests/baselines/reference/undeclaredModuleError.errors.txt
==== tests/cases/compiler/undeclaredModuleError.ts (6 errors) ====
    import fs = require('fs');
    ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2071: Unable to resolve external module ''fs''.
    ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2072: Module cannot be aliased to a non-module type.
    function readdir(path: string, accept: (stat: fs.Stats, name: string) => boolean, callback: (error: Error, results: { name: string; stat: fs.Stats; }[]) => void ) {}
    
    function join(...paths: string[]) {}
    
    function instrumentFile(covFileDir: string, covFileName: string, originalFilePath: string) {
        fs.readFile(originalFilePath, () => {       
        ~~
!!! error TS2095: Could not find symbol 'fs'.
            readdir(covFileDir, () => {
            ~~~~~~~
!!! error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Call signatures of types '() => void' and '(stat: any, name: string) => boolean' are incompatible.
            ~~~~~~~
!!! error TS2087: Could not select overload for 'call' expression.
            } , (error: Error, files: {}[]) => {
                    files.forEach((file) => {
                        var fullPath = join(IDoNotExist);
                                            ~~~~~~~~~~~
!!! error TS2095: Could not find symbol 'IDoNotExist'.
                    } );
                } );
        } );
    }